--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </header>
 
         <div class="home-containers title-container">
-            <h1 id="title">НАЗВАНИЕ БАЗЫ ОТДЫХА</h1>
+            <h1 id="title"></h1>
             <span class="description">
                 Приятный и яркий отдых у Черного моря в солнечной Затоке
             </span>
@@ -44,7 +44,7 @@
 
         <div class="phone-container">
             <span class="description">ЗАБРОНИРУЙ ПО ТЕЛЕФОНУ:</span>
-            <span class="phone-number">+38 (068) 000-00-00</span>
+            <span class="phone-number"></span>
         </div>
     </div>
 </section>
@@ -56,18 +56,6 @@
             <img src="./img/about/about.png" class="card-img" alt="...">
             <div class="card-body">
                 <p class="card-text" id="about-text">
-                    Короткий рассказ о самой базе и её хозяевах.
-
-                    Место расположения, преимущества выбора этого места для отдыха, как можно добраться, расстояние к
-                    морю, магазину, кафе, лунапарку и тому подобное. Место расположения, преимущества выбора этого места
-                    для отдыха, как можно добраться, расстояние к морю, магазину, кафе, лунапарку и тому подобное.
-
-                    Место расположения, преимущества выбора этого места для отдыха, как можно добраться, расстояние к
-                    морю, магазину, кафе, лунапарку и тому подобное. Место расположения, преимущества выбора этого места
-                    для отдыха, как можно добраться, расстояние к морю, магазину, кафе, лунапарку и тому подобное.
-
-                    Место расположения, преимущества выбора этого места для отдыха, как можно добраться, расстояние к
-                    морю, магазину, кафе, лунапарку и тому подобное.
                 </p>
             </div>
         </div>
@@ -80,232 +68,6 @@
 
         <div id="roomsCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" id="rooms-wrapper">
-                <div class="carousel-item active">
-                    <div class="rooms-row">
-                        <article class="room-info">
-                            <h3 class="room-title">
-                                4-х местный
-                            </h3>
-                            <p class="description">
-                                Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
-                                балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
-                            </p>
-                            <ul>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Холодильник
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Телевизор
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Wi-fi
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Общая кухня
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Душ на этаже
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Кондиционер
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Небольшой шкаф
-                                </li>
-                            </ul>
-                        </article>
-                        <div class="room-img room-img-50 slide1 photo-1"></div>
-                    </div>
-                    <div class="rooms-row">
-                        <div class="room-img room-img-30 slide1 photo-2"></div>
-                        <div class="room-img room-img-30 slide1 photo-3"></div>
-                        <div class="room-img room-img-30 slide1 photo-4"></div>
-                    </div>
-                </div>
-
-
-                <div class="carousel-item">
-
-                    <div class="rooms-row">
-                        <article class="room-info">
-                            <h3 class="room-title">
-                                4-х местный
-                            </h3>
-                            <p class="description">
-                                Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
-                                балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
-                            </p>
-                            <ul>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Холодильник
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Телевизор
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Wi-fi
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Общая кухня
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Душ на этаже
-                                </li>
-                            </ul>
-                        </article>
-                        <div class="room-img room-img-50 slide2 photo-1"></div>
-                    </div>
-                    <div class="rooms-row">
-                        <div class="room-img room-img-30 slide2 photo-2"></div>
-                        <div class="room-img room-img-30 slide2 photo-3"></div>
-                        <div class="room-img room-img-30 slide2 photo-4"></div>
-                    </div>
-                </div>
-
-
-                <div class="carousel-item">
-
-                    <div class="rooms-row">
-                        <article class="room-info">
-                            <h3 class="room-title">
-                                4-х местный эконом
-                            </h3>
-                            <p class="description">
-                                Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
-                                балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
-                            </p>
-                            <ul>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Холодильник
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Телевизор
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Wi-fi
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Общая кухня
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Душ на этаже
-                                </li>
-                            </ul>
-                        </article>
-                        <div class="room-img room-img-50 slide3 photo-1"></div>
-                    </div>
-                    <div class="rooms-row">
-                        <div class="room-img room-img-30 slide3 photo-2"></div>
-                        <div class="room-img room-img-30 slide3 photo-3"></div>
-                        <div class="room-img room-img-30 slide3 photo-4"></div>
-                    </div>
-                </div>
-
-
-                <div class="carousel-item">
-
-                    <div class="rooms-row">
-                        <article class="room-info">
-                            <h3 class="room-title">
-                                2-х местный эконом
-                            </h3>
-                            <p class="description">
-                                Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
-                                балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
-                            </p>
-                            <ul>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Холодильник
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Телевизор
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Wi-fi
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Общая кухня
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Душ на этаже
-                                </li>
-                            </ul>
-                        </article>
-                        <div class="room-img room-img-50 slide4 photo-1"></div>
-                    </div>
-                    <div class="rooms-row">
-                        <div class="room-img room-img-30 slide4 photo-2"></div>
-                        <div class="room-img room-img-30 slide4 photo-3"></div>
-                        <div class="room-img room-img-30 slide4 photo-4"></div>
-                    </div>
-                </div>
-
-
-                <div class="carousel-item">
-
-                    <div class="rooms-row">
-                        <article class="room-info">
-                            <h3 class="room-title">
-                                2-х местный
-                            </h3>
-                            <p class="description">
-                                Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
-                                балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
-                            </p>
-                            <ul>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Холодильник
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Телевизор
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Wi-fi
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Общая кухня
-                                </li>
-                                <li class="list-item">
-                                    <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                    Душ на этаже
-                                </li>
-                            </ul>
-                        </article>
-                        <div class="room-img room-img-50 slide5 photo-1"></div>
-                    </div>
-                    <div class="rooms-row">
-                        <div class="room-img room-img-30 slide5 photo-2"></div>
-                        <div class="room-img room-img-30 slide5 photo-3"></div>
-                        <div class="room-img room-img-30 slide5 photo-4"></div>
-                    </div>
-                </div>
-
             </div>
             <div class="carousel-controllers">
                 <a class="carousel-control-prev" href="#roomsCarousel" role="button" data-slide="prev">
@@ -326,38 +88,7 @@
     <div class="wrapper container-1320 container-white">
         <h2 class="container-title">отзывы наших гостей</h2>
         <div class="container-1094 comments-container" id="comments-wrapper">
-            <article class="comments-card">
-                <div class="card-title-row">
-                    <img src="./img/comments/comment1.png" alt="comment" class="card-img">
-                    <div class="commentator-container">
-                        <span class="commentator-name">Екатерина Александровна</span>
-                        <span class="commentator-info">Учительница средней школы, Черкассы</span>
-                        <span class="commentator-date">Отзыв оставлен: 25.07.2020</span>
-                    </div>
-                </div>
 
-                <p class="comment">
-                    Отдыхали вдвоем с мужем. Всё понравилось, в номере чисто, к морю недалеко.
-                    Отдельно можно отметить демократичную стоимость проживания и гостеприимство хозяев. С удовольствием
-                    будем рекомендовать это место знакомым!
-                </p>
-            </article>
-
-            <article class="comments-card">
-                <div class="card-title-row">
-                    <img src="./img/comments/comment2.png" alt="comment" class="card-img">
-                    <div class="commentator-container">
-                        <span class="commentator-name">Дмитрий Сергеевич</span>
-                        <span class="commentator-info">Менеджер, Полтава</span>
-                        <span class="commentator-date">Отзыв оставлен: 15.07.2020</span>
-                    </div>
-                </div>
-
-                <p class="comment">
-                    Хорошая база с нормальными условиями проживания. Всё близко, и магазин и кафешки и развлечения.
-                    Отлично отдохнули, в следующем году заедем еще)))))
-                </p>
-            </article>
         </div>
     </div>
 </section>
@@ -387,15 +118,13 @@
                 <span class="contacts-type">Наш адрес:</span>
                 <p class="description">
                     Одесская обл. Затока <br/>
-                    <span id="address">Улица Приморская, 68</span>
+                    <span id="address"></span>
                 </p>
             </div>
             <div class="contacts-card">
                 <img class="contacts-icon" src="img/phone-icon.png" alt="place point">
                 <span class="contacts-type">Номер телефона:</span>
-                <p class="phone-number description">
-                    +38 (068) 000-00-00
-                </p>
+                <p class="phone-number description"></p>
             </div>
         </div>
         <div class="map-container">
