--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
 
 <section id="about">
     <div class="container-1320 wrapper">
-        <h2 class="container-title">БУДЕМ ЗНАКОМЫ!</h2>
+        <h2 class="container-title">О гостевом доме</h2>
         <div class="card card-container">
             <img src="./img/about/about.png" class="card-img" alt="...">
-            <div class="card-body">
-                <p class="card-text" id="about-text">
-                </p>
+            <div class="card-body" id="about-text">
             </div>
         </div>
     </div>
@@ -123,8 +121,8 @@
             </div>
             <div class="contacts-card">
                 <img class="contacts-icon" src="img/phone-icon.png" alt="place point">
-                <span class="contacts-type">Номер телефона:</span>
-                <p class="phone-number description"></p>
+                <span class="contacts-type" id="phone-type"></span>
+                <p class="phone-number description" id="contact-phones"></p>
             </div>
         </div>
         <div class="map-container">
