--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             </div>
         </div>
         <div class="map-container">
-            <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9F%D1%80%D0%B8%D0%BC%D0%BE%D1%80%D1%81%D0%BA%D0%B0%D1%8F,+68,+%D0%97%D0%B0%D1%82%D0%BE%D0%BA%D0%B0,+%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+67773/@46.0650978,30.4516025,17z/data=!4m5!3m4!1s0x40c7eb380a087ce9:0x3ad74dcc814326b!8m2!3d46.0637281!4d30.4525466" id="map" class="map-img" target="_blank">
-                <img src="img/map.png" alt="map">
+            <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9F%D1%80%D0%B8%D0%BC%D0%BE%D1%80%D1%81%D0%BA%D0%B0%D1%8F,+68,+%D0%97%D0%B0%D1%82%D0%BE%D0%BA%D0%B0,+%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+67773/@46.0650978,30.4516025,17z/data=!4m5!3m4!1s0x40c7eb380a087ce9:0x3ad74dcc814326b!8m2!3d46.0637281!4d30.4525466" id="map" class="map-link" target="_blank">
+                <img class="map-image" src="img/map.png" alt="map">
             </a>
         </div>
     </div>
