--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Отдых в Затоке. База отдыха</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <title>Дом отдыха "Поворот". Отдых в Затоке. Отдых в Одессе</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;600;700&family=Montserrat:wght@400;500;600;700&display=swap"
           rel="stylesheet">
 
@@ -87,7 +88,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="modal-body">
-                        <div id="modal-room" class="room-img room-img-50"></div>
+                        <img id="modal-room" class="room-img">
                     </div>
                 </div>
             </div>
@@ -141,13 +142,14 @@
         <div class="map-container">
             <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9F%D1%80%D0%B8%D0%BC%D0%BE%D1%80%D1%81%D0%BA%D0%B0%D1%8F,+68,+%D0%97%D0%B0%D1%82%D0%BE%D0%BA%D0%B0,+%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+67773/@46.0650978,30.4516025,17z/data=!4m5!3m4!1s0x40c7eb380a087ce9:0x3ad74dcc814326b!8m2!3d46.0637281!4d30.4525466" id="map" class="map-link" target="_blank">
                 <img class="map-image" src="img/map.png" alt="map">
+                <span class="map-tips">Открыть Google Карты</span>
             </a>
         </div>
     </div>
 </section>
 
 <footer class="footer container-white">
-    <span>© 2020 All rights reserved</span>
+    <span>© 2020 Maluka studio</span>
 </footer>
 <a href="#home-page" class="scrollup"></a>
 
